// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/Forms/FormRadioGroup Compact 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-form-group"
  >
    <div
      className="fd-form-item"
      onChange={[Function]}
    >
      <input
        className="fd-radio fd-radio--compact"
        id="fd-52"
        name="fd-51"
        type="radio"
      />
      <label
        className="fd-form-label fd-radio__label"
        htmlFor="fd-52"
      >
        Option 1
      </label>
    </div>
    <div
      className="fd-form-item"
      onChange={[Function]}
    >
      <input
        className="fd-radio fd-radio--compact"
        id="fd-53"
        name="fd-51"
        type="radio"
      />
      <label
        className="fd-form-label fd-radio__label"
        htmlFor="fd-53"
      >
        Option 2
      </label>
    </div>
    <div
      className="fd-form-item"
      onChange={[Function]}
    >
      <input
        className="fd-radio fd-radio--compact"
        id="fd-54"
        name="fd-51"
        type="radio"
      />
      <label
        className="fd-form-label fd-radio__label"
        htmlFor="fd-54"
      >
        Option 3
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/Forms/FormRadioGroup Dev 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-form-group"
  >
    <div
      className="fd-form-item"
      onChange={[Function]}
    >
      <input
        className="fd-radio"
        id="fd-66"
        name="fd-65"
        type="radio"
      />
      <label
        className="fd-form-label fd-radio__label"
        htmlFor="fd-66"
      >
        Option 1
      </label>
    </div>
    <div
      className="fd-form-item"
      onChange={[Function]}
    >
      <input
        className="fd-radio"
        id="fd-67"
        name="fd-65"
        type="radio"
      />
      <label
        className="fd-form-label fd-radio__label"
        htmlFor="fd-67"
      >
        Option 2
      </label>
    </div>
    <div
      className="fd-form-item"
      onChange={[Function]}
    >
      <input
        className="fd-radio"
        id="fd-68"
        name="fd-65"
        type="radio"
      />
      <label
        className="fd-form-label fd-radio__label"
        htmlFor="fd-68"
      >
        Option 3
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/Forms/FormRadioGroup Disabled 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-form-group"
  >
    <div
      className="fd-form-item"
      onChange={[Function]}
    >
      <input
        className="fd-radio"
        disabled={true}
        id="fd-56"
        name="fd-55"
        type="radio"
      />
      <label
        className="fd-form-label is-disabled fd-radio__label"
        htmlFor="fd-56"
      >
        Option 1
      </label>
    </div>
    <div
      className="fd-form-item"
      onChange={[Function]}
    >
      <input
        className="fd-radio"
        disabled={true}
        id="fd-57"
        name="fd-55"
        type="radio"
      />
      <label
        className="fd-form-label is-disabled fd-radio__label"
        htmlFor="fd-57"
      >
        Option 2
      </label>
    </div>
    <div
      className="fd-form-item"
      onChange={[Function]}
    >
      <input
        className="fd-radio"
        disabled={true}
        id="fd-58"
        name="fd-55"
        type="radio"
      />
      <label
        className="fd-form-label is-disabled fd-radio__label"
        htmlFor="fd-58"
      >
        Option 3
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/Forms/FormRadioGroup Inline 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-form-group fd-form-group--inline"
  >
    <div
      className="fd-form-item fd-form-item--inline"
      onChange={[Function]}
    >
      <input
        className="fd-radio"
        id="fd-48"
        name="fd-47"
        type="radio"
      />
      <label
        className="fd-form-label fd-radio__label"
        htmlFor="fd-48"
      >
        Option 1
      </label>
    </div>
    <div
      className="fd-form-item fd-form-item--inline"
      onChange={[Function]}
    >
      <input
        className="fd-radio"
        id="fd-49"
        name="fd-47"
        type="radio"
      />
      <label
        className="fd-form-label fd-radio__label"
        htmlFor="fd-49"
      >
        Option 2
      </label>
    </div>
    <div
      className="fd-form-item fd-form-item--inline"
      onChange={[Function]}
    >
      <input
        className="fd-radio"
        id="fd-50"
        name="fd-47"
        type="radio"
      />
      <label
        className="fd-form-label fd-radio__label"
        htmlFor="fd-50"
      >
        Option 3
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/Forms/FormRadioGroup Primary 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-form-group"
  >
    <div
      className="fd-form-item"
      onChange={[Function]}
    >
      <input
        className="fd-radio"
        id="fd-44"
        name="fd-43"
        type="radio"
      />
      <label
        className="fd-form-label fd-radio__label"
        htmlFor="fd-44"
      >
        Option 1
      </label>
    </div>
    <div
      className="fd-form-item"
      onChange={[Function]}
    >
      <input
        className="fd-radio"
        id="fd-45"
        name="fd-43"
        type="radio"
      />
      <label
        className="fd-form-label fd-radio__label"
        htmlFor="fd-45"
      >
        Option 2
      </label>
    </div>
    <div
      className="fd-form-item"
      onChange={[Function]}
    >
      <input
        className="fd-radio"
        id="fd-46"
        name="fd-43"
        type="radio"
      />
      <label
        className="fd-form-label fd-radio__label"
        htmlFor="fd-46"
      >
        Option 3
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/Forms/FormRadioGroup Validation States 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-form-group"
  >
    <div
      className="fd-form-item"
      onChange={[Function]}
    >
      <input
        className="fd-radio"
        id="fd-60"
        name="fd-59"
        type="radio"
      />
      <label
        className="fd-form-label fd-radio__label"
        htmlFor="fd-60"
      >
        Default
      </label>
    </div>
    <div
      className="fd-form-item"
      onChange={[Function]}
    >
      <input
        className="fd-radio is-error"
        id="fd-61"
        name="fd-59"
        type="radio"
      />
      <label
        className="fd-form-label fd-radio__label"
        htmlFor="fd-61"
      >
        Error
      </label>
    </div>
    <div
      className="fd-form-item"
      onChange={[Function]}
    >
      <input
        className="fd-radio is-warning"
        id="fd-62"
        name="fd-59"
        type="radio"
      />
      <label
        className="fd-form-label fd-radio__label"
        htmlFor="fd-62"
      >
        Warning
      </label>
    </div>
    <div
      className="fd-form-item"
      onChange={[Function]}
    >
      <input
        className="fd-radio is-success"
        id="fd-63"
        name="fd-59"
        type="radio"
      />
      <label
        className="fd-form-label fd-radio__label"
        htmlFor="fd-63"
      >
        Success
      </label>
    </div>
    <div
      className="fd-form-item"
      onChange={[Function]}
    >
      <input
        className="fd-radio is-information"
        id="fd-64"
        name="fd-59"
        type="radio"
      />
      <label
        className="fd-form-label fd-radio__label"
        htmlFor="fd-64"
      >
        Information
      </label>
    </div>
  </div>
</div>
`;
